# S47-0226-AJ-Angular-Rust-CampusConnect

./: .gitignore  API.md  ARCHITECTURE.md  EXPLANATION.md  FORMS.md  PAGINATION_FILTERING.md  PROJECT_STRUCTURE_ANALYSIS.md  README.md  RUST_MEMORY_MODEL.md  SECURITY.md  SERDE.md  SETUP.md
Documents/: Readme[concept-1Anushka].md  Readme[concept-2Anushka].md  Readme[concept-3Anushka].md
academics-service/: Cargo.toml
academics-service/src/: main.rs
auth-service/: Cargo.toml
auth-service/src/: main.rs
campus-connect-frontend/: README.md  ROUTING.md  angular.json  package-lock.json  package.json
campus-connect-frontend/src/: index.html  styles.css
campus-connect-frontend/src/app/: app.component.ts  app.routes.ts
campus-connect-frontend/src/app/auth/: login.component.ts  (+1 more)
campus-connect-frontend/src/environments/: environment.ts
docs/concepts/: Readme[concept-1Anushka].md
examples/: README.md  backend_example.rs  borrowing_example.rs  lifetime_example.rs  ownership_example.rs
finance-service/: Cargo.toml
finance-service/src/: main.rs
frontend/: angular.json  package-lock.json  package.json
frontend/campus-connect-app/: README.md  angular.json  package-lock.json  package.json
frontend/campus-connect-app/src/: index.html
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.routes.ts
hostel-service/: Cargo.toml
hostel-service/src/: main.rs
hr-service/: Cargo.toml
hr-service/src/: main.rs
library-service/: Cargo.toml
library-service/src/: main.rs
mock-backend/: package-lock.json  package.json  server.js
(+36 files in other folders)
